@@ -15,6 +15,7 @@ v8.0.32
 - WL#15036: Support for type hints
 - WL#14861: Remove distutils support
 - BUG#34710366: Django implementation does not pass unit tests
+- BUG#34695103: Remove debug messages that shows authentication data
 - BUG#34689812: Fix datetime conversion when using prepared cursors
 - BUG#34675508: Character set 'utf8' unsupported in python mysql connector when using MariaDB
 - BUG#34556157: Kerberos authorization fails when using SSPI as security interface
